// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests Modal BackgroundScroll 1`] = `
.c13 {
  display: inline-block;
  width: 100%;
}

.c13:disabled,
.c13[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c14 {
  width: 100%;
  margin-bottom: 8px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c15:disabled,
.c15[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c15[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c16 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c17 {
  color: var(--charcoal-text2);
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c19:not(:disabled):not([aria-disabled]):hover,
.c19[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c19:not(:disabled):not([aria-disabled]):active,
.c19[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c19:not(:disabled):not([aria-disabled]):focus,
.c19[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c19:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c19[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c19:not(:disabled):not([aria-disabled]):focus-visible,
.c19[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c19:disabled,
.c19[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c20 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c20:not(:disabled):not([aria-disabled]):hover,
.c20[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c20:not(:disabled):not([aria-disabled]):active,
.c20[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c5 {
  padding-bottom: 40px;
}

.c18 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  margin-bottom: 8px;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c11:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c12::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c12:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::placeholder {
  color: var(--charcoal-text3);
}

.c6 {
  display: grid;
  gap: 24px;
}

.c8 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c8::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c8::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <div
      style={
        Object {
          "height": 1024,
        }
      }
    >
      <button
        className="charcoal-button"
        onClick={[Function]}
      >
        Open Modal
      </button>
    </div>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7 c8"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c13"
              >
                <div
                  className="charcoal-field-label-root c14"
                >
                  <label
                    className="charcoal-field-label"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c15"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c16"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c17"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="c18"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c19 c20"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal BottomSheet 1`] = `
.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c10:not(:disabled):not([aria-disabled]):hover,
.c10[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c10:not(:disabled):not([aria-disabled]):active,
.c10[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c10:not(:disabled):not([aria-disabled]):focus,
.c10[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c10:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c10[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c10:not(:disabled):not([aria-disabled]):focus-visible,
.c10[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c10:disabled,
.c10[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c11 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c5 {
  padding-bottom: 40px;
}

.c9 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  display: grid;
  gap: 24px;
}

.c8 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c8::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c8::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
    max-width: unset;
    width: 100%;
    border-radius: 0;
    margin: auto 0 0 0;
  }
}

@media (max-width:743px) {
  .c0 {
    padding: 0;
  }
}

@media (max-width:743px) {
  .c2 {
    height: 48px;
  }
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
        }
      }
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7 c8"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="c9"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Danger"
              onClick={[Function]}
            >
              削除する
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c10 c11"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal Default 1`] = `
.c13 {
  display: inline-block;
  width: 100%;
}

.c13:disabled,
.c13[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
  opacity: 0.32;
}

.c14 {
  width: 100%;
  margin-bottom: 8px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 40px;
  width: 100%;
  box-sizing: border-box;
  border: none;
  cursor: pointer;
  gap: 4px;
  padding-right: 8px;
  padding-left: 8px;
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  -webkit-transition: 0.2s box-shadow,0.2s background-color;
  transition: 0.2s box-shadow,0.2s background-color;
}

.c15:disabled,
.c15[aria-disabled]:not([aria-disabled=false]) {
  cursor: default;
}

.c15:not(:disabled):not([aria-disabled]):focus,
.c15[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c15[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c15:not(:disabled):not([aria-disabled]):focus-visible,
.c15[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  background-color: var(--charcoal-surface3-press);
}

.c16 {
  text-align: left;
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
  color: var(--charcoal-text2);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c17 {
  color: var(--charcoal-text2);
}

.c19 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c19:not(:disabled):not([aria-disabled]):hover,
.c19[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c19:not(:disabled):not([aria-disabled]):active,
.c19[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c19:not(:disabled):not([aria-disabled]):focus,
.c19[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c19:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c19[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c19:not(:disabled):not([aria-disabled]):focus-visible,
.c19[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c19:disabled,
.c19[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c20 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c20:not(:disabled):not([aria-disabled]):hover,
.c20[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c20:not(:disabled):not([aria-disabled]):active,
.c20[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c5 {
  padding-bottom: 40px;
}

.c18 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  margin-bottom: 8px;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c11:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c12::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c12:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::placeholder {
  color: var(--charcoal-text3);
}

.c6 {
  display: grid;
  gap: 24px;
}

.c8 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c8::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c8::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7 c8"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    autoFocus={true}
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c13"
              >
                <div
                  className="charcoal-field-label-root c14"
                >
                  <label
                    className="charcoal-field-label"
                  >
                    Fruits
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  aria-hidden="true"
                  style={
                    Object {
                      "border": 0,
                      "clip": "rect(0 0 0 0)",
                      "clipPath": "inset(50%)",
                      "height": "1px",
                      "margin": "-1px",
                      "overflow": "hidden",
                      "padding": 0,
                      "position": "absolute",
                      "whiteSpace": "nowrap",
                      "width": "1px",
                    }
                  }
                >
                  <select
                    onChange={[Function]}
                    tabIndex={-1}
                    value="10"
                  >
                    <option
                      value="10"
                    >
                      10
                    </option>
                    <option
                      value="20"
                    >
                      20
                    </option>
                    <option
                      value="30"
                    >
                      30
                    </option>
                  </select>
                </div>
                <button
                  className="c15"
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="c16"
                  >
                    Apple
                  </span>
                  <pixiv-icon
                    class="c17"
                    name="16/Menu"
                  />
                </button>
              </div>
            </div>
          </div>
          <div
            className="c18"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c19 c20"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal FullBottomSheet 1`] = `
.c14 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 32px;
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  color: var(--charcoal-text3);
  background-color: var(--charcoal-transparent);
  border-radius: 999999px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
}

.c14:not(:disabled):not([aria-disabled]):hover,
.c14[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
  background-color: var(--charcoal-transparent-hover);
}

.c14:not(:disabled):not([aria-disabled]):active,
.c14[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
  background-color: var(--charcoal-transparent-press);
}

.c14:not(:disabled):not([aria-disabled]):focus,
.c14[aria-disabled='false']:focus {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c14:not(:disabled):not([aria-disabled]):focus:not(:focus-visible),
.c14[aria-disabled='false']:focus:not(:focus-visible) {
  box-shadow: none;
}

.c14:not(:disabled):not([aria-disabled]):focus-visible,
.c14[aria-disabled='false']:focus-visible {
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c14:disabled,
.c14[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
}

.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c15 {
  position: absolute;
  top: 8px;
  right: 8px;
  color: var(--charcoal-text3);
  -webkit-transition: 0.2s color;
  transition: 0.2s color;
}

.c15:not(:disabled):not([aria-disabled]):hover,
.c15[aria-disabled='false']:hover {
  color: var(--charcoal-text3-hover);
}

.c15:not(:disabled):not([aria-disabled]):active,
.c15[aria-disabled='false']:active {
  color: var(--charcoal-text3-press);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c5 {
  padding-bottom: 40px;
}

.c13 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c10 {
  margin-bottom: 8px;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr;
  height: 40px;
  -webkit-transition: 0.2s background-color,0.2s box-shadow;
  transition: 0.2s background-color,0.2s box-shadow;
  color: var(--charcoal-text2);
  background-color: var(--charcoal-surface3);
  border-radius: 4px;
  gap: 4px;
  padding: 0 8px;
  line-height: 22px;
  font-size: 14px;
}

.c11:not(:disabled):not([aria-disabled]):hover,
.c11 [aria-disabled='false']:hover {
  background-color: var(--charcoal-surface3-hover);
}

.c11:focus-within {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12 {
  border: none;
  box-sizing: border-box;
  outline: none;
  font-family: inherit;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  width: calc(100% / 0.875);
  height: calc(100% / 0.875);
  font-size: calc(14px / 0.875);
  line-height: calc(22px / 0.875);
  padding-left: 0;
  padding-right: 0;
  border-radius: calc(4px / 0.875);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent;
  color: var(--charcoal-text2);
}

.c12::-webkit-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::-moz-placeholder {
  color: var(--charcoal-text3);
}

.c12:-ms-input-placeholder {
  color: var(--charcoal-text3);
}

.c12::placeholder {
  color: var(--charcoal-text3);
}

.c6 {
  display: grid;
  gap: 24px;
}

.c8 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c8::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c8::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
    max-width: unset;
    width: 100%;
    border-radius: 0;
    margin: auto 0 0 0;
    min-height: 100%;
  }
}

@media (max-width:743px) {
  .c0 {
    padding: 0;
  }
}

@media (max-width:743px) {
  .c2 {
    height: 48px;
  }
}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0)",
          "overflow": "hidden",
        }
      }
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={
          Object {
            "transform": " translateY(100%)",
          }
        }
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7 c8"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Name
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Nagisa"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="c7"
            >
              <div
                className="c9"
              >
                <div
                  className="charcoal-field-label-root c10"
                >
                  <label
                    className="charcoal-field-label"
                    htmlFor="test-id"
                    id="test-id"
                  >
                    Country
                  </label>
                  <div
                    className="charcoal-field-label-sub-label"
                  >
                    <span />
                  </div>
                </div>
                <div
                  className="c11"
                >
                  <input
                    aria-labelledby="test-id"
                    className="c12"
                    disabled={false}
                    id="test-id"
                    onChange={[Function]}
                    placeholder="Tokyo"
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            className="c13"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              Apply
            </button>
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Cancel
            </button>
          </div>
        </div>
        <button
          className="charcoal-clickable c14 c15"
          onClick={[Function]}
        >
          <pixiv-icon
            name="24/Close"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal InternalScroll 1`] = `
.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c5 {
  padding-bottom: 40px;
}

.c7 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  overflow: auto;
  max-height: calc( 100vh - 184px - 56px );
}

.c8 {
  position: relative;
}

.c8::before {
  content: '';
  pointer-events: none;
  border-top: 1px solid rgba(0,0,0,0.08);
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              style={
                Object {
                  "background": "linear-gradient(#e66465, #9198e5)",
                  "height": 1000,
                }
              }
            />
          </div>
          <div
            className="c7 c8"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              onClick={[Function]}
            >
              Close
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Tests Modal NotDismmissableStory 1`] = `
.c1 {
  margin: auto;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  width: 440px;
  background-color: var(--charcoal-surface1);
  border-radius: 24px;
}

.c1:focus {
  outline: none;
}

.c0 {
  z-index: 10;
  overflow: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  width: -webkit-fill-available;
  width: -moz-available;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 40px 0;
  box-sizing: border-box;
  background-color: var(--charcoal-surface4);
}

.c3 {
  margin: 0;
  font-weight: inherit;
  font-size: inherit;
}

.c2 {
  height: 64px;
  display: grid;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c4 {
  color: var(--charcoal-text1);
  font-size: 16px;
  line-height: 24px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c7 {
  padding-left: 16px;
  padding-right: 16px;
}

.c5 {
  padding-bottom: 40px;
}

.c9 {
  display: grid;
  grid-auto-flow: row;
  grid-row-gap: 8px;
  padding-top: 16px;
  padding-left: 16px;
  padding-right: 16px;
}

.c6 {
  display: grid;
  gap: 24px;
}

.c8 {
  color: var(--charcoal-text2);
  font-size: 14px;
  line-height: 22px;
  display: flow-root;
}

.c8::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c8::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

@media (max-width:743px) {
  .c1 {
    max-width: 440px;
    width: calc(100% - 48px);
  }
}

@media (max-width:743px) {

}

@media (max-width:743px) {

}

<div
  data-dark={false}
>
  <div
    aria-hidden={null}
    data-overlay-container={true}
  >
    <button
      className="charcoal-button"
      onClick={[Function]}
    >
      Open Modal
    </button>
    <div
      className="c0"
      onClick={[Function]}
      onPointerDown={[Function]}
      style={Object {}}
    >
      <div
        className="c1"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="dialog"
        size="M"
        style={Object {}}
        tabIndex={-1}
      >
        <div
          className="c2"
        >
          <h3
            className="c3 c4"
          >
            Title
          </h3>
        </div>
        <div
          className="c5"
        >
          <div
            className="c6"
          >
            <div
              className="c7 c8"
            >
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod placeat tenetur, necessitatibus laudantium cumque exercitationem provident. Quaerat iure enim, eveniet dolores earum odio quo possimus fugiat aspernatur, numquam, commodi repellat.
            </div>
          </div>
          <div
            className="c9"
          >
            <button
              className="charcoal-button"
              data-full-width={true}
              data-variant="Primary"
              onClick={[Function]}
            >
              OK
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
